--- a/package.json
+++ b/package.json
@@ -2,9 +2,12 @@
   "name": "3d-pixel-picrew",
   "private": true,
   "version": "0.0.0",
+  "homepage": "https://owlks4.github.io/",
   "type": "module",
   "scripts": {
     "dev": "vite",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d dist",
     "build": "vite build",
     "preview": "vite preview"
   },
@@ -12,6 +15,7 @@
     "vite": "^5.0.0"
   },
   "dependencies": {
+    "gh-pages": "^6.1.0",
     "three": "^0.159.0"
   }
 }
