--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "vite": "^5.0.0"
   },
   "dependencies": {
+    "fast-png": "^6.2.0",
     "gh-pages": "^6.1.0",
     "three": "^0.159.0"
   }
