--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   "dependencies": {
     "fast-png": "^6.2.0",
     "gh-pages": "^6.1.0",
+    "gif.js": "^0.2.0",
     "three": "^0.159.0"
   }
 }
