--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "fast-png": "^6.2.0",
     "gh-pages": "^6.1.0",
     "gif.js": "^0.2.0",
+    "jszip": "^3.10.1",
     "three": "^0.159.0"
   }
 }
